(navbar, app, ..) changed color of navbar, moved it up on mobile, fixed some margins, aligning, etc.

--- a/client-app/src/components/Navbar/Navbar.module.css
+++ b/client-app/src/components/Navbar/Navbar.module.css
@@ -26,10 +26,10 @@
 			cursor: pointer;
 			text-decoration: none;
 			font-weight: 600;
-			color: #646cff;
+			color: #fa6728;
 
 			&:hover {
-				color: #3e45d3;
+				color: #fb9063;
 			}
 		}
 	}
