--- a/client-app/src/main-sections/About/About.module.css
+++ b/client-app/src/main-sections/About/About.module.css
@@ -2,8 +2,8 @@
 .contents_container {
 	display: flex;
 	flex-direction: column;
+	text-align: left;
 	align-items: flex-start;
 	gap: .2rem;
-	/* margin: 0 auto; */
 	margin: 0 3rem 0 calc(4rem + 1rem);
 }
