--- a/client-app/src/main-sections/Intro/Intro.module.css
+++ b/client-app/src/main-sections/Intro/Intro.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-top: 20rem;
+	padding-top: 20vh;
 
 	.inner_container {
 		font-size: 1.5rem;
